# Steganografia

./: .gitignore  CMakeCache.txt  CMakeLists.txt
build-steganografia-gui-Desktop-Debug/: Makefile  moc_mainwindow.cpp  steganografia-gui  ui_mainwindow.h
src/: CMakeLists.txt  color.cc  color.h  image.cc  image.h  main.cc  pixel.cc  pixel.h  test.cc  test.h  utils.cc  utils.h
steganografia-gui/: mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  mainwindow.ui  steganografia-gui.pro
